2005-02-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: use new find_mime_type_pixbuf instead of
	find_icon
	* src/ImageSelect.py: remove internal media widgets, use new 
	find_mime_type_pixbuf instead of find_icon
	* src/ImgManip.py: catch pixbuf_new_from_file exception
	* src/MediaView.py: use new find_mime_type_pixbuf instead of
	find_icon
	* src/SelectObject.py: use new find_mime_type_pixbuf instead of
	find_icon
	* various: replace the deprecated gtk.TRUE/gtk.FALSE with 
	True/False
	* src/DbPrompter.py: catch zero length filename
	* src/FamilyView.py: fixed selection of spouse's parents
	* src/gramps_main.py: update display after loading data

2005-02-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: use ComboBox instead of ComboBoxEntry
	for temple
	* src/EditPerson.py: use ComboBox instead of ComboBoxEntry
	for temple

2005-02-22 Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in: Bump up the version.
	* src/docgen/PdfDoc.py (write_note): Attempt latin1 encoding.

	* src/Exporter.py (native_export): Use real export.
	* src/WriteGrdb.py (exportData): Provide default cl value.

	* src/gramps_main.py (on_new_clicked): Do not prematurely close db.
	* src/DbPrompter.py (NewNativeDbPrompter.chooser): Close old db
	if positively opening a new one.

2005-02-21  Don Allingham  <dallingham@users.sourceforge.net>
	* Release: Version 1.1.90 "Successful encyclopedia salesman" released.

2005-02-21  Eero Tamminen <eerot@sf>
	* NEWS: Added notes about user visible GraphViz and StatisticsChart
	  report changes/enhancements

2005-02-21 Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.

	* src/docgen/PSDrawDoc.py (draw_text,write_at):
	Attempt latin1 encoding.

	* src/docgen/PSDrawDoc.py (rgb_color): Remove function, import it
	from ReportUtils instead.
	* src/ReportUtils.py (rgb_color): Add function.
	* src/docgen/LPRDoc.py: Use rgb_color from ReportUtils.
