@@ -1,3 +1,6 @@
+2005-02-24 Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/MediaView.py (on_select_row): Add garbage collection call.
+
 2005-02-23  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/AddMedia.py: use new find_mime_type_pixbuf instead of
 	find_icon
